// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bounce output stays stable > renders the same CSS 1`] = `
".svgm-tick {
  transform-origin: 12px 11.5px;
  transform-box: view-box;
  animation: svgm-tick-bounce 1s cubic-bezier(0.42, 0, 0.58, 1) 0.25s 1 both;
}

@keyframes svgm-tick-bounce {
  0% {
    transform: translateY(0px);
    animation-timing-function: cubic-bezier(0, 0, 0.58, 1);
  }
  23.58% {
    transform: translateY(-2.75px);
    animation-timing-function: cubic-bezier(0.42, 0, 1, 1);
  }
  47.15% {
    transform: translateY(0px);
    animation-timing-function: cubic-bezier(0, 0, 0.58, 1);
  }
  62.97% {
    transform: translateY(-1.2375px);
    animation-timing-function: cubic-bezier(0.42, 0, 1, 1);
  }
  78.78% {
    transform: translateY(0px);
    animation-timing-function: cubic-bezier(0, 0, 0.58, 1);
  }
  89.39% {
    transform: translateY(-0.5569px);
    animation-timing-function: cubic-bezier(0.42, 0, 1, 1);
  }
  100% {
    transform: translateY(0px);
    animation-timing-function: cubic-bezier(0, 0, 0.58, 1);
  }
}"
`;

exports[`bounce output stays stable > renders the same Lottie JSON 1`] = `
{
  "assets": [],
  "ddd": 0,
  "fr": 30,
  "h": 24,
  "ip": 0,
  "layers": [
    {
      "ao": 0,
      "bm": 0,
      "ddd": 0,
      "ind": 1,
      "ip": 0,
      "ks": {
        "a": {
          "a": 0,
          "k": [
            0,
            0,
          ],
        },
        "o": {
          "a": 0,
          "k": [
            100,
          ],
        },
        "p": {
          "a": 1,
          "k": [
            {
              "i": {
                "x": [
                  0.58,
                ],
                "y": [
                  1,
                ],
              },
              "o": {
                "x": [
                  0.001,
                ],
                "y": [
                  0,
                ],
              },
              "s": [
                12,
                11.5,
              ],
              "t": 7.5,
            },
            {
              "i": {
                "x": [
                  0.999,
                ],
                "y": [
                  1,
                ],
              },
              "o": {
                "x": [
                  0.42,
                ],
                "y": [
                  0,
                ],
              },
              "s": [
                12,
                8.75,
              ],
              "t": 14.5727,
            },
            {
              "i": {
                "x": [
                  0.58,
                ],
                "y": [
                  1,
                ],
              },
              "o": {
                "x": [
                  0.001,
                ],
                "y": [
                  0,
                ],
              },
              "s": [
                12,
                11.5,
              ],
              "t": 21.6455,
            },
            {
              "i": {
                "x": [
                  0.999,
                ],
                "y": [
                  1,
                ],
              },
              "o": {
                "x": [
                  0.42,
                ],
                "y": [
                  0,
                ],
              },
              "s": [
                12,
                10.2625,
              ],
              "t": 26.39,
            },
            {
              "i": {
                "x": [
                  0.58,
                ],
                "y": [
                  1,
                ],
              },
              "o": {
                "x": [
                  0.001,
                ],
                "y": [
                  0,
                ],
              },
              "s": [
                12,
                11.5,
              ],
              "t": 31.1345,
            },
            {
              "i": {
                "x": [
                  0.999,
                ],
                "y": [
                  1,
                ],
              },
              "o": {
                "x": [
                  0.42,
                ],
                "y": [
                  0,
                ],
              },
              "s": [
                12,
                10.9431,
              ],
              "t": 34.3173,
            },
            {
              "s": [
                12,
                11.5,
              ],
              "t": 37.5,
            },
          ],
        },
        "r": {
          "a": 0,
          "k": [
            0,
          ],
        },
        "s": {
          "a": 0,
          "k": [
            100,
            100,
          ],
        },
      },
      "nm": "tick",
      "op": 38,
      "shapes": [
        {
          "it": [
            {
              "ind": 0,
              "ks": {
                "a": 0,
                "k": {
                  "c": false,
                  "i": [
                    [
                      0,
                      0,
                    ],
                    [
                      3.6667,
                      -3.6667,
                    ],
                    [
                      1.6667,
                      1.6667,
                    ],
                  ],
                  "o": [
                    [
                      -3.6667,
                      3.6667,
                    ],
                    [
                      -1.6667,
                      -1.6667,
                    ],
                    [
                      0,
                      0,
                    ],
                  ],
                  "v": [
                    [
                      8,
                      -5.5,
                    ],
                    [
                      -3,
                      5.5,
                    ],
                    [
                      -8,
                      0.5,
                    ],
                  ],
                },
              },
              "nm": "Path 1",
              "ty": "sh",
            },
            {
              "c": {
                "a": 0,
                "k": [
                  0.1450980392156863,
                  0.38823529411764707,
                  0.9215686274509803,
                ],
              },
              "lc": 2,
              "lj": 2,
              "nm": "Stroke",
              "o": {
                "a": 0,
                "k": 100,
              },
              "ty": "st",
              "w": {
                "a": 0,
                "k": 2,
              },
            },
            {
              "a": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "nm": "Transform",
              "o": {
                "a": 0,
                "k": 100,
              },
              "p": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "r": {
                "a": 0,
                "k": 0,
              },
              "s": {
                "a": 0,
                "k": [
                  100,
                  100,
                ],
              },
              "sa": {
                "a": 0,
                "k": 0,
              },
              "sk": {
                "a": 0,
                "k": 0,
              },
              "ty": "tr",
            },
          ],
          "nm": "tick",
          "ty": "gr",
        },
      ],
      "sr": 1,
      "st": 0,
      "ty": 4,
    },
  ],
  "markers": [],
  "nm": "bounce",
  "op": 38,
  "v": "5.7.4",
  "w": 24,
}
`;

exports[`bounce output stays stable > renders the same standalone SVG 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
  <style>
    .svgm-tick {
      transform-origin: 12px 11.5px;
      transform-box: view-box;
      animation: svgm-tick-bounce 1s cubic-bezier(0.42, 0, 0.58, 1) 0.25s 1 both;
    }

    @keyframes svgm-tick-bounce {
      0% {
        transform: translateY(0px);
        animation-timing-function: cubic-bezier(0, 0, 0.58, 1);
      }
      23.58% {
        transform: translateY(-2.75px);
        animation-timing-function: cubic-bezier(0.42, 0, 1, 1);
      }
      47.15% {
        transform: translateY(0px);
        animation-timing-function: cubic-bezier(0, 0, 0.58, 1);
      }
      62.97% {
        transform: translateY(-1.2375px);
        animation-timing-function: cubic-bezier(0.42, 0, 1, 1);
      }
      78.78% {
        transform: translateY(0px);
        animation-timing-function: cubic-bezier(0, 0, 0.58, 1);
      }
      89.39% {
        transform: translateY(-0.5569px);
        animation-timing-function: cubic-bezier(0.42, 0, 1, 1);
      }
      100% {
        transform: translateY(0px);
        animation-timing-function: cubic-bezier(0, 0, 0.58, 1);
      }
    }
  </style>
  <path class="svgm-tick" d="M20 6C16.333 9.667 12.667 13.333 9 17C7.333 15.333 5.667 13.667 4 12" fill="none" stroke="#2563eb" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
</svg>"
`;

exports[`fade output stays stable > renders the same CSS 1`] = `
".svgm-tick {
  animation: svgm-tick-fade 1s cubic-bezier(0.42, 0, 0.58, 1) 0.25s 1 both;
}

@keyframes svgm-tick-fade {
  0% {
    opacity: 0;
    animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
  }
  100% {
    opacity: 1;
    animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
  }
}"
`;

exports[`fade output stays stable > renders the same Lottie JSON 1`] = `
{
  "assets": [],
  "ddd": 0,
  "fr": 30,
  "h": 24,
  "ip": 0,
  "layers": [
    {
      "ao": 0,
      "bm": 0,
      "ddd": 0,
      "ind": 1,
      "ip": 0,
      "ks": {
        "a": {
          "a": 0,
          "k": [
            0,
            0,
          ],
        },
        "o": {
          "a": 1,
          "k": [
            {
              "i": {
                "x": [
                  0.58,
                ],
                "y": [
                  1,
                ],
              },
              "o": {
                "x": [
                  0.42,
                ],
                "y": [
                  0,
                ],
              },
              "s": [
                0,
              ],
              "t": 7.5,
            },
            {
              "s": [
                100,
              ],
              "t": 37.5,
            },
          ],
        },
        "p": {
          "a": 0,
          "k": [
            12,
            11.5,
          ],
        },
        "r": {
          "a": 0,
          "k": [
            0,
          ],
        },
        "s": {
          "a": 0,
          "k": [
            100,
            100,
          ],
        },
      },
      "nm": "tick",
      "op": 38,
      "shapes": [
        {
          "it": [
            {
              "ind": 0,
              "ks": {
                "a": 0,
                "k": {
                  "c": false,
                  "i": [
                    [
                      0,
                      0,
                    ],
                    [
                      3.6667,
                      -3.6667,
                    ],
                    [
                      1.6667,
                      1.6667,
                    ],
                  ],
                  "o": [
                    [
                      -3.6667,
                      3.6667,
                    ],
                    [
                      -1.6667,
                      -1.6667,
                    ],
                    [
                      0,
                      0,
                    ],
                  ],
                  "v": [
                    [
                      8,
                      -5.5,
                    ],
                    [
                      -3,
                      5.5,
                    ],
                    [
                      -8,
                      0.5,
                    ],
                  ],
                },
              },
              "nm": "Path 1",
              "ty": "sh",
            },
            {
              "c": {
                "a": 0,
                "k": [
                  0.1450980392156863,
                  0.38823529411764707,
                  0.9215686274509803,
                ],
              },
              "lc": 2,
              "lj": 2,
              "nm": "Stroke",
              "o": {
                "a": 0,
                "k": 100,
              },
              "ty": "st",
              "w": {
                "a": 0,
                "k": 2,
              },
            },
            {
              "a": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "nm": "Transform",
              "o": {
                "a": 0,
                "k": 100,
              },
              "p": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "r": {
                "a": 0,
                "k": 0,
              },
              "s": {
                "a": 0,
                "k": [
                  100,
                  100,
                ],
              },
              "sa": {
                "a": 0,
                "k": 0,
              },
              "sk": {
                "a": 0,
                "k": 0,
              },
              "ty": "tr",
            },
          ],
          "nm": "tick",
          "ty": "gr",
        },
      ],
      "sr": 1,
      "st": 0,
      "ty": 4,
    },
  ],
  "markers": [],
  "nm": "fade",
  "op": 38,
  "v": "5.7.4",
  "w": 24,
}
`;

exports[`fade output stays stable > renders the same standalone SVG 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
  <style>
    .svgm-tick {
      animation: svgm-tick-fade 1s cubic-bezier(0.42, 0, 0.58, 1) 0.25s 1 both;
    }

    @keyframes svgm-tick-fade {
      0% {
        opacity: 0;
        animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
      }
      100% {
        opacity: 1;
        animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
      }
    }
  </style>
  <path class="svgm-tick" d="M20 6C16.333 9.667 12.667 13.333 9 17C7.333 15.333 5.667 13.667 4 12" fill="none" stroke="#2563eb" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
</svg>"
`;

exports[`gradient output stays stable > renders the same Lottie JSON 1`] = `
{
  "assets": [],
  "ddd": 0,
  "fr": 30,
  "h": 50,
  "ip": 0,
  "layers": [
    {
      "ao": 0,
      "bm": 0,
      "ddd": 0,
      "ind": 1,
      "ip": 0,
      "ks": {
        "a": {
          "a": 0,
          "k": [
            0,
            0,
          ],
        },
        "o": {
          "a": 1,
          "k": [
            {
              "i": {
                "x": [
                  0.58,
                ],
                "y": [
                  1,
                ],
              },
              "o": {
                "x": [
                  0.42,
                ],
                "y": [
                  0,
                ],
              },
              "s": [
                0,
              ],
              "t": 12,
            },
            {
              "s": [
                100,
              ],
              "t": 42,
            },
          ],
        },
        "p": {
          "a": 0,
          "k": [
            50,
            45,
          ],
        },
        "r": {
          "a": 0,
          "k": [
            0,
          ],
        },
        "s": {
          "a": 0,
          "k": [
            100,
            100,
          ],
        },
      },
      "nm": "edge",
      "op": 42,
      "shapes": [
        {
          "it": [
            {
              "ind": 0,
              "ks": {
                "a": 0,
                "k": {
                  "c": false,
                  "i": [
                    [
                      0,
                      0,
                    ],
                    [
                      -30,
                      0,
                    ],
                  ],
                  "o": [
                    [
                      30,
                      0,
                    ],
                    [
                      0,
                      0,
                    ],
                  ],
                  "v": [
                    [
                      -45,
                      0,
                    ],
                    [
                      45,
                      0,
                    ],
                  ],
                },
              },
              "nm": "Path 1",
              "ty": "sh",
            },
            {
              "a": {
                "a": 0,
                "k": -153.4349,
              },
              "e": {
                "a": 0,
                "k": [
                  -20,
                  -25,
                ],
              },
              "g": {
                "k": {
                  "a": 0,
                  "k": [
                    0,
                    0.9922,
                    0.8784,
                    0.2784,
                    1,
                    0.9765,
                    0.451,
                    0.0863,
                  ],
                },
                "p": 2,
              },
              "h": {
                "a": 0,
                "k": 44.7214,
              },
              "lc": 1,
              "lj": 1,
              "nm": "Gradient Stroke",
              "o": {
                "a": 0,
                "k": 100,
              },
              "s": {
                "a": 0,
                "k": [
                  -30,
                  -25,
                ],
              },
              "t": 2,
              "ty": "gs",
              "w": {
                "a": 0,
                "k": 2,
              },
            },
            {
              "a": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "nm": "Transform",
              "o": {
                "a": 0,
                "k": 100,
              },
              "p": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "r": {
                "a": 0,
                "k": 0,
              },
              "s": {
                "a": 0,
                "k": [
                  100,
                  100,
                ],
              },
              "sa": {
                "a": 0,
                "k": 0,
              },
              "sk": {
                "a": 0,
                "k": 0,
              },
              "ty": "tr",
            },
          ],
          "nm": "edge",
          "ty": "gr",
        },
      ],
      "sr": 1,
      "st": 0,
      "ty": 4,
    },
    {
      "ao": 0,
      "bm": 0,
      "ddd": 0,
      "ind": 2,
      "ip": 0,
      "ks": {
        "a": {
          "a": 0,
          "k": [
            0,
            0,
          ],
        },
        "o": {
          "a": 1,
          "k": [
            {
              "i": {
                "x": [
                  0.58,
                ],
                "y": [
                  1,
                ],
              },
              "o": {
                "x": [
                  0.42,
                ],
                "y": [
                  0,
                ],
              },
              "s": [
                0,
              ],
              "t": 9.6,
            },
            {
              "s": [
                100,
              ],
              "t": 39.6,
            },
          ],
        },
        "p": {
          "a": 0,
          "k": [
            70,
            35,
          ],
        },
        "r": {
          "a": 0,
          "k": [
            0,
          ],
        },
        "s": {
          "a": 0,
          "k": [
            100,
            100,
          ],
        },
      },
      "nm": "missing",
      "op": 42,
      "shapes": [
        {
          "it": [
            {
              "ind": 0,
              "ks": {
                "a": 0,
                "k": {
                  "c": true,
                  "i": [
                    [
                      0,
                      3.3333,
                    ],
                    [
                      -6.6667,
                      0,
                    ],
                    [
                      0,
                      -3.3333,
                    ],
                    [
                      6.6667,
                      0,
                    ],
                  ],
                  "o": [
                    [
                      6.6667,
                      0,
                    ],
                    [
                      0,
                      3.3333,
                    ],
                    [
                      -6.6667,
                      0,
                    ],
                    [
                      0,
                      -3.3333,
                    ],
                  ],
                  "v": [
                    [
                      -10,
                      -5,
                    ],
                    [
                      10,
                      -5,
                    ],
                    [
                      10,
                      5,
                    ],
                    [
                      -10,
                      5,
                    ],
                  ],
                },
              },
              "nm": "Path 1",
              "ty": "sh",
            },
            {
              "a": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "nm": "Transform",
              "o": {
                "a": 0,
                "k": 100,
              },
              "p": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "r": {
                "a": 0,
                "k": 0,
              },
              "s": {
                "a": 0,
                "k": [
                  100,
                  100,
                ],
              },
              "sa": {
                "a": 0,
                "k": 0,
              },
              "sk": {
                "a": 0,
                "k": 0,
              },
              "ty": "tr",
            },
          ],
          "nm": "missing",
          "ty": "gr",
        },
      ],
      "sr": 1,
      "st": 0,
      "ty": 4,
    },
    {
      "ao": 0,
      "bm": 0,
      "ddd": 0,
      "ind": 3,
      "ip": 0,
      "ks": {
        "a": {
          "a": 0,
          "k": [
            0,
            0,
          ],
        },
        "o": {
          "a": 1,
          "k": [
            {
              "i": {
                "x": [
                  0.58,
                ],
                "y": [
                  1,
                ],
              },
              "o": {
                "x": [
                  0.42,
                ],
                "y": [
                  0,
                ],
              },
              "s": [
                0,
              ],
              "t": 7.2,
            },
            {
              "s": [
                100,
              ],
              "t": 37.2,
            },
          ],
        },
        "p": {
          "a": 0,
          "k": [
            70,
            15,
          ],
        },
        "r": {
          "a": 0,
          "k": [
            0,
          ],
        },
        "s": {
          "a": 0,
          "k": [
            100,
            100,
          ],
        },
      },
      "nm": "patterned",
      "op": 42,
      "shapes": [
        {
          "it": [
            {
              "ind": 0,
              "ks": {
                "a": 0,
                "k": {
                  "c": true,
                  "i": [
                    [
                      0,
                      6.6667,
                    ],
                    [
                      -6.6667,
                      0,
                    ],
                    [
                      0,
                      -6.6667,
                    ],
                    [
                      6.6667,
                      0,
                    ],
                  ],
                  "o": [
                    [
                      6.6667,
                      0,
                    ],
                    [
                      0,
                      6.6667,
                    ],
                    [
                      -6.6667,
                      0,
                    ],
                    [
                      0,
                      -6.6667,
                    ],
                  ],
                  "v": [
                    [
                      -10,
                      -10,
                    ],
                    [
                      10,
                      -10,
                    ],
                    [
                      10,
                      10,
                    ],
                    [
                      -10,
                      10,
                    ],
                  ],
                },
              },
              "nm": "Path 1",
              "ty": "sh",
            },
            {
              "c": {
                "a": 0,
                "k": [
                  0.39215686274509803,
                  0.4549019607843137,
                  0.5450980392156862,
                ],
              },
              "nm": "Fill",
              "o": {
                "a": 0,
                "k": 100,
              },
              "r": 1,
              "ty": "fl",
            },
            {
              "a": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "nm": "Transform",
              "o": {
                "a": 0,
                "k": 100,
              },
              "p": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "r": {
                "a": 0,
                "k": 0,
              },
              "s": {
                "a": 0,
                "k": [
                  100,
                  100,
                ],
              },
              "sa": {
                "a": 0,
                "k": 0,
              },
              "sk": {
                "a": 0,
                "k": 0,
              },
              "ty": "tr",
            },
          ],
          "nm": "patterned",
          "ty": "gr",
        },
      ],
      "sr": 1,
      "st": 0,
      "ty": 4,
    },
    {
      "ao": 0,
      "bm": 0,
      "ddd": 0,
      "ind": 4,
      "ip": 0,
      "ks": {
        "a": {
          "a": 0,
          "k": [
            0,
            0,
          ],
        },
        "o": {
          "a": 1,
          "k": [
            {
              "i": {
                "x": [
                  0.58,
                ],
                "y": [
                  1,
                ],
              },
              "o": {
                "x": [
                  0.42,
                ],
                "y": [
                  0,
                ],
              },
              "s": [
                0,
              ],
              "t": 4.8,
            },
            {
              "s": [
                100,
              ],
              "t": 34.8,
            },
          ],
        },
        "p": {
          "a": 0,
          "k": [
            50,
            45,
          ],
        },
        "r": {
          "a": 0,
          "k": [
            0,
          ],
        },
        "s": {
          "a": 0,
          "k": [
            100,
            100,
          ],
        },
      },
      "nm": "banner",
      "op": 42,
      "shapes": [
        {
          "it": [
            {
              "ind": 0,
              "ks": {
                "a": 0,
                "k": {
                  "c": true,
                  "i": [
                    [
                      0,
                      3.3333,
                    ],
                    [
                      -33.3333,
                      0,
                    ],
                    [
                      0,
                      -3.3333,
                    ],
                    [
                      33.3333,
                      0,
                    ],
                  ],
                  "o": [
                    [
                      33.3333,
                      0,
                    ],
                    [
                      0,
                      3.3333,
                    ],
                    [
                      -33.3333,
                      0,
                    ],
                    [
                      0,
                      -3.3333,
                    ],
                  ],
                  "v": [
                    [
                      -50,
                      -5,
                    ],
                    [
                      50,
                      -5,
                    ],
                    [
                      50,
                      5,
                    ],
                    [
                      -50,
                      5,
                    ],
                  ],
                },
              },
              "nm": "Path 1",
              "ty": "sh",
            },
            {
              "a": {
                "a": 0,
                "k": 0,
              },
              "e": {
                "a": 0,
                "k": [
                  -50,
                  5,
                ],
              },
              "g": {
                "k": {
                  "a": 0,
                  "k": [
                    0,
                    0.2196,
                    0.7412,
                    0.9725,
                    1,
                    0.1176,
                    0.2275,
                    0.5412,
                    0,
                    1,
                    1,
                    0.4,
                  ],
                },
                "p": 2,
              },
              "h": {
                "a": 0,
                "k": 0,
              },
              "nm": "Gradient Fill",
              "o": {
                "a": 0,
                "k": 100,
              },
              "r": 1,
              "s": {
                "a": 0,
                "k": [
                  50,
                  -5,
                ],
              },
              "t": 1,
              "ty": "gf",
            },
            {
              "a": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "nm": "Transform",
              "o": {
                "a": 0,
                "k": 100,
              },
              "p": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "r": {
                "a": 0,
                "k": 0,
              },
              "s": {
                "a": 0,
                "k": [
                  100,
                  100,
                ],
              },
              "sa": {
                "a": 0,
                "k": 0,
              },
              "sk": {
                "a": 0,
                "k": 0,
              },
              "ty": "tr",
            },
          ],
          "nm": "banner",
          "ty": "gr",
        },
      ],
      "sr": 1,
      "st": 0,
      "ty": 4,
    },
    {
      "ao": 0,
      "bm": 0,
      "ddd": 0,
      "ind": 5,
      "ip": 0,
      "ks": {
        "a": {
          "a": 0,
          "k": [
            0,
            0,
          ],
        },
        "o": {
          "a": 1,
          "k": [
            {
              "i": {
                "x": [
                  0.58,
                ],
                "y": [
                  1,
                ],
              },
              "o": {
                "x": [
                  0.42,
                ],
                "y": [
                  0,
                ],
              },
              "s": [
                0,
              ],
              "t": 2.4,
            },
            {
              "s": [
                100,
              ],
              "t": 32.4,
            },
          ],
        },
        "p": {
          "a": 0,
          "k": [
            20,
            20,
          ],
        },
        "r": {
          "a": 0,
          "k": [
            0,
          ],
        },
        "s": {
          "a": 0,
          "k": [
            100,
            100,
          ],
        },
      },
      "nm": "sun-disc",
      "op": 42,
      "shapes": [
        {
          "it": [
            {
              "ind": 0,
              "ks": {
                "a": 0,
                "k": {
                  "c": true,
                  "i": [
                    [
                      0,
                      -5.5228,
                    ],
                    [
                      5.5228,
                      0,
                    ],
                    [
                      0,
                      5.5228,
                    ],
                    [
                      -5.5228,
                      0,
                    ],
                  ],
                  "o": [
                    [
                      0,
                      5.5228,
                    ],
                    [
                      -5.5228,
                      0,
                    ],
                    [
                      0,
                      -5.5228,
                    ],
                    [
                      5.5228,
                      0,
                    ],
                  ],
                  "v": [
                    [
                      10,
                      0,
                    ],
                    [
                      0,
                      10,
                    ],
                    [
                      -10,
                      0,
                    ],
                    [
                      0,
                      -10,
                    ],
                  ],
                },
              },
              "nm": "Path 1",
              "ty": "sh",
            },
            {
              "a": {
                "a": 0,
                "k": -153.4349,
              },
              "e": {
                "a": 0,
                "k": [
                  10,
                  0,
                ],
              },
              "g": {
                "k": {
                  "a": 0,
                  "k": [
                    0,
                    0.9922,
                    0.8784,
                    0.2784,
                    1,
                    0.9765,
                    0.451,
                    0.0863,
                  ],
                },
                "p": 2,
              },
              "h": {
                "a": 0,
                "k": 44.7214,
              },
              "nm": "Gradient Fill",
              "o": {
                "a": 0,
                "k": 100,
              },
              "r": 1,
              "s": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "t": 2,
              "ty": "gf",
            },
            {
              "a": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "nm": "Transform",
              "o": {
                "a": 0,
                "k": 100,
              },
              "p": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "r": {
                "a": 0,
                "k": 0,
              },
              "s": {
                "a": 0,
                "k": [
                  100,
                  100,
                ],
              },
              "sa": {
                "a": 0,
                "k": 0,
              },
              "sk": {
                "a": 0,
                "k": 0,
              },
              "ty": "tr",
            },
          ],
          "nm": "sun-disc",
          "ty": "gr",
        },
      ],
      "sr": 1,
      "st": 0,
      "ty": 4,
    },
    {
      "ao": 0,
      "bm": 0,
      "ddd": 0,
      "ind": 6,
      "ip": 0,
      "ks": {
        "a": {
          "a": 0,
          "k": [
            0,
            0,
          ],
        },
        "o": {
          "a": 1,
          "k": [
            {
              "i": {
                "x": [
                  0.58,
                ],
                "y": [
                  1,
                ],
              },
              "o": {
                "x": [
                  0.42,
                ],
                "y": [
                  0,
                ],
              },
              "s": [
                0,
              ],
              "t": 0,
            },
            {
              "s": [
                100,
              ],
              "t": 30,
            },
          ],
        },
        "p": {
          "a": 0,
          "k": [
            50,
            25,
          ],
        },
        "r": {
          "a": 0,
          "k": [
            0,
          ],
        },
        "s": {
          "a": 0,
          "k": [
            100,
            100,
          ],
        },
      },
      "nm": "backdrop",
      "op": 42,
      "shapes": [
        {
          "it": [
            {
              "ind": 0,
              "ks": {
                "a": 0,
                "k": {
                  "c": true,
                  "i": [
                    [
                      0,
                      16.6667,
                    ],
                    [
                      -33.3333,
                      0,
                    ],
                    [
                      0,
                      -16.6667,
                    ],
                    [
                      33.3333,
                      0,
                    ],
                  ],
                  "o": [
                    [
                      33.3333,
                      0,
                    ],
                    [
                      0,
                      16.6667,
                    ],
                    [
                      -33.3333,
                      0,
                    ],
                    [
                      0,
                      -16.6667,
                    ],
                  ],
                  "v": [
                    [
                      -50,
                      -25,
                    ],
                    [
                      50,
                      -25,
                    ],
                    [
                      50,
                      25,
                    ],
                    [
                      -50,
                      25,
                    ],
                  ],
                },
              },
              "nm": "Path 1",
              "ty": "sh",
            },
            {
              "a": {
                "a": 0,
                "k": 0,
              },
              "e": {
                "a": 0,
                "k": [
                  50,
                  25,
                ],
              },
              "g": {
                "k": {
                  "a": 0,
                  "k": [
                    0,
                    0.2196,
                    0.7412,
                    0.9725,
                    1,
                    0.1176,
                    0.2275,
                    0.5412,
                    0,
                    1,
                    1,
                    0.4,
                  ],
                },
                "p": 2,
              },
              "h": {
                "a": 0,
                "k": 0,
              },
              "nm": "Gradient Fill",
              "o": {
                "a": 0,
                "k": 100,
              },
              "r": 1,
              "s": {
                "a": 0,
                "k": [
                  -50,
                  -25,
                ],
              },
              "t": 1,
              "ty": "gf",
            },
            {
              "a": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "nm": "Transform",
              "o": {
                "a": 0,
                "k": 100,
              },
              "p": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "r": {
                "a": 0,
                "k": 0,
              },
              "s": {
                "a": 0,
                "k": [
                  100,
                  100,
                ],
              },
              "sa": {
                "a": 0,
                "k": 0,
              },
              "sk": {
                "a": 0,
                "k": 0,
              },
              "ty": "tr",
            },
          ],
          "nm": "backdrop",
          "ty": "gr",
        },
      ],
      "sr": 1,
      "st": 0,
      "ty": 4,
    },
  ],
  "markers": [],
  "nm": "gradients",
  "op": 42,
  "v": "5.7.4",
  "w": 100,
}
`;

exports[`gradient output stays stable > renders the same defs and markup 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 50" width="100" height="50">
  <defs>
    <linearGradient id="svgm-gradient-1" gradientUnits="userSpaceOnUse" x1="0" y1="0" x2="1" y2="1" gradientTransform="matrix(100 0 0 50 0 0)">
      <stop offset="0" stop-color="#38bdf8" />
      <stop offset="1" stop-color="#1e3a8a" stop-opacity="0.4" />
    </linearGradient>
    <radialGradient id="svgm-gradient-2" gradientUnits="userSpaceOnUse" cx="20" cy="20" r="10" fx="16" fy="18">
      <stop offset="0" stop-color="#fde047" />
      <stop offset="1" stop-color="#f97316" />
    </radialGradient>
    <linearGradient id="svgm-gradient-3" gradientUnits="userSpaceOnUse" x1="0" y1="0" x2="1" y2="1" gradientTransform="matrix(0 10 -100 0 100 40)">
      <stop offset="0" stop-color="#38bdf8" />
      <stop offset="1" stop-color="#1e3a8a" stop-opacity="0.4" />
    </linearGradient>
  </defs>
  <path class="svgm-backdrop" d="M0 0C33.333 0 66.667 0 100 0C100 16.667 100 33.333 100 50C66.667 50 33.333 50 0 50C0 33.333 0 16.667 0 0Z" fill="url(#svgm-gradient-1)" />
  <path class="svgm-sun-disc" d="M30 20C30 25.523 25.523 30 20 30C14.477 30 10 25.523 10 20C10 14.477 14.477 10 20 10C25.523 10 30 14.477 30 20Z" fill="url(#svgm-gradient-2)" />
  <path class="svgm-banner" d="M0 40C33.333 40 66.667 40 100 40C100 43.333 100 46.667 100 50C66.667 50 33.333 50 0 50C0 46.667 0 43.333 0 40Z" fill="url(#svgm-gradient-3)" />
  <path class="svgm-patterned" d="M60 5C66.667 5 73.333 5 80 5C80 11.667 80 18.333 80 25C73.333 25 66.667 25 60 25C60 18.333 60 11.667 60 5Z" fill="#64748b" />
  <path class="svgm-missing" d="M60 30C66.667 30 73.333 30 80 30C80 33.333 80 36.667 80 40C73.333 40 66.667 40 60 40C60 36.667 60 33.333 60 30Z" fill="none" />
  <path class="svgm-edge" d="M5 45C35 45 65 45 95 45" fill="none" stroke="url(#svgm-gradient-2)" stroke-width="2" stroke-linecap="butt" stroke-linejoin="miter" />
</svg>"
`;

exports[`morph output stays stable > renders the same CSS 1`] = `
".svgm-tick {
  animation: svgm-tick-morph 1s cubic-bezier(0.42, 0, 0.58, 1) 0.25s 1 both;
}

@keyframes svgm-tick-morph {
  0% {
    d: path("M20 6C16.333 9.667 12.667 13.333 9 17C7.333 15.333 5.667 13.667 4 12");
    animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
  }
  100% {
    d: path("M4 4C6.667 6.667 9.333 9.333 12 12C14.667 14.667 17.333 17.333 20 20");
    animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
  }
}"
`;

exports[`morph output stays stable > renders the same Lottie JSON 1`] = `
{
  "assets": [],
  "ddd": 0,
  "fr": 30,
  "h": 24,
  "ip": 0,
  "layers": [
    {
      "ao": 0,
      "bm": 0,
      "ddd": 0,
      "ind": 1,
      "ip": 0,
      "ks": {
        "a": {
          "a": 0,
          "k": [
            0,
            0,
          ],
        },
        "o": {
          "a": 0,
          "k": [
            100,
          ],
        },
        "p": {
          "a": 0,
          "k": [
            12,
            11.5,
          ],
        },
        "r": {
          "a": 0,
          "k": [
            0,
          ],
        },
        "s": {
          "a": 0,
          "k": [
            100,
            100,
          ],
        },
      },
      "nm": "tick",
      "op": 38,
      "shapes": [
        {
          "it": [
            {
              "ind": 0,
              "ks": {
                "a": 1,
                "k": [
                  {
                    "i": {
                      "x": [
                        0.58,
                      ],
                      "y": [
                        1,
                      ],
                    },
                    "o": {
                      "x": [
                        0.42,
                      ],
                      "y": [
                        0,
                      ],
                    },
                    "s": [
                      {
                        "c": false,
                        "i": [
                          [
                            0,
                            0,
                          ],
                          [
                            3.6667,
                            -3.6667,
                          ],
                          [
                            1.6667,
                            1.6667,
                          ],
                        ],
                        "o": [
                          [
                            -3.6667,
                            3.6667,
                          ],
                          [
                            -1.6667,
                            -1.6667,
                          ],
                          [
                            0,
                            0,
                          ],
                        ],
                        "v": [
                          [
                            8,
                            -5.5,
                          ],
                          [
                            -3,
                            5.5,
                          ],
                          [
                            -8,
                            0.5,
                          ],
                        ],
                      },
                    ],
                    "t": 0,
                  },
                  {
                    "i": {
                      "x": [
                        0.58,
                      ],
                      "y": [
                        1,
                      ],
                    },
                    "o": {
                      "x": [
                        0.42,
                      ],
                      "y": [
                        0,
                      ],
                    },
                    "s": [
                      {
                        "c": false,
                        "i": [
                          [
                            0,
                            0,
                          ],
                          [
                            3.6667,
                            -3.6667,
                          ],
                          [
                            1.6667,
                            1.6667,
                          ],
                        ],
                        "o": [
                          [
                            -3.6667,
                            3.6667,
                          ],
                          [
                            -1.6667,
                            -1.6667,
                          ],
                          [
                            0,
                            0,
                          ],
                        ],
                        "v": [
                          [
                            8,
                            -5.5,
                          ],
                          [
                            -3,
                            5.5,
                          ],
                          [
                            -8,
                            0.5,
                          ],
                        ],
                      },
                    ],
                    "t": 7.5,
                  },
                  {
                    "s": [
                      {
                        "c": false,
                        "i": [
                          [
                            0,
                            0,
                          ],
                          [
                            -2.6667,
                            -2.6667,
                          ],
                          [
                            -2.6667,
                            -2.6667,
                          ],
                        ],
                        "o": [
                          [
                            2.6667,
                            2.6667,
                          ],
                          [
                            2.6667,
                            2.6667,
                          ],
                          [
                            0,
                            0,
                          ],
                        ],
                        "v": [
                          [
                            -8,
                            -7.5,
                          ],
                          [
                            0,
                            0.5,
                          ],
                          [
                            8,
                            8.5,
                          ],
                        ],
                      },
                    ],
                    "t": 37.5,
                  },
                ],
              },
              "nm": "Path 1",
              "ty": "sh",
            },
            {
              "c": {
                "a": 0,
                "k": [
                  0.1450980392156863,
                  0.38823529411764707,
                  0.9215686274509803,
                ],
              },
              "lc": 2,
              "lj": 2,
              "nm": "Stroke",
              "o": {
                "a": 0,
                "k": 100,
              },
              "ty": "st",
              "w": {
                "a": 0,
                "k": 2,
              },
            },
            {
              "a": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "nm": "Transform",
              "o": {
                "a": 0,
                "k": 100,
              },
              "p": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "r": {
                "a": 0,
                "k": 0,
              },
              "s": {
                "a": 0,
                "k": [
                  100,
                  100,
                ],
              },
              "sa": {
                "a": 0,
                "k": 0,
              },
              "sk": {
                "a": 0,
                "k": 0,
              },
              "ty": "tr",
            },
          ],
          "nm": "tick",
          "ty": "gr",
        },
      ],
      "sr": 1,
      "st": 0,
      "ty": 4,
    },
  ],
  "markers": [],
  "nm": "morph",
  "op": 38,
  "v": "5.7.4",
  "w": 24,
}
`;

exports[`morph output stays stable > renders the same standalone SVG 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
  <style>
    .svgm-tick {
      animation: svgm-tick-morph 1s cubic-bezier(0.42, 0, 0.58, 1) 0.25s 1 both;
    }

    @keyframes svgm-tick-morph {
      0% {
        d: path("M20 6C16.333 9.667 12.667 13.333 9 17C7.333 15.333 5.667 13.667 4 12");
        animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
      }
      100% {
        d: path("M4 4C6.667 6.667 9.333 9.333 12 12C14.667 14.667 17.333 17.333 20 20");
        animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
      }
    }
  </style>
  <path class="svgm-tick" d="M20 6C16.333 9.667 12.667 13.333 9 17C7.333 15.333 5.667 13.667 4 12" fill="none" stroke="#2563eb" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
</svg>"
`;

exports[`rotate output stays stable > renders the same CSS 1`] = `
".svgm-tick {
  transform-origin: 12px 11.5px;
  transform-box: view-box;
  animation: svgm-tick-rotate 1s cubic-bezier(0.42, 0, 0.58, 1) 0.25s 1 both;
}

@keyframes svgm-tick-rotate {
  0% {
    transform: rotate(0deg);
    animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
  }
  100% {
    transform: rotate(360deg);
    animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
  }
}"
`;

exports[`rotate output stays stable > renders the same Lottie JSON 1`] = `
{
  "assets": [],
  "ddd": 0,
  "fr": 30,
  "h": 24,
  "ip": 0,
  "layers": [
    {
      "ao": 0,
      "bm": 0,
      "ddd": 0,
      "ind": 1,
      "ip": 0,
      "ks": {
        "a": {
          "a": 0,
          "k": [
            0,
            0,
          ],
        },
        "o": {
          "a": 0,
          "k": [
            100,
          ],
        },
        "p": {
          "a": 0,
          "k": [
            12,
            11.5,
          ],
        },
        "r": {
          "a": 1,
          "k": [
            {
              "i": {
                "x": [
                  0.58,
                ],
                "y": [
                  1,
                ],
              },
              "o": {
                "x": [
                  0.42,
                ],
                "y": [
                  0,
                ],
              },
              "s": [
                0,
              ],
              "t": 7.5,
            },
            {
              "s": [
                360,
              ],
              "t": 37.5,
            },
          ],
        },
        "s": {
          "a": 0,
          "k": [
            100,
            100,
          ],
        },
      },
      "nm": "tick",
      "op": 38,
      "shapes": [
        {
          "it": [
            {
              "ind": 0,
              "ks": {
                "a": 0,
                "k": {
                  "c": false,
                  "i": [
                    [
                      0,
                      0,
                    ],
                    [
                      3.6667,
                      -3.6667,
                    ],
                    [
                      1.6667,
                      1.6667,
                    ],
                  ],
                  "o": [
                    [
                      -3.6667,
                      3.6667,
                    ],
                    [
                      -1.6667,
                      -1.6667,
                    ],
                    [
                      0,
                      0,
                    ],
                  ],
                  "v": [
                    [
                      8,
                      -5.5,
                    ],
                    [
                      -3,
                      5.5,
                    ],
                    [
                      -8,
                      0.5,
                    ],
                  ],
                },
              },
              "nm": "Path 1",
              "ty": "sh",
            },
            {
              "c": {
                "a": 0,
                "k": [
                  0.1450980392156863,
                  0.38823529411764707,
                  0.9215686274509803,
                ],
              },
              "lc": 2,
              "lj": 2,
              "nm": "Stroke",
              "o": {
                "a": 0,
                "k": 100,
              },
              "ty": "st",
              "w": {
                "a": 0,
                "k": 2,
              },
            },
            {
              "a": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "nm": "Transform",
              "o": {
                "a": 0,
                "k": 100,
              },
              "p": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "r": {
                "a": 0,
                "k": 0,
              },
              "s": {
                "a": 0,
                "k": [
                  100,
                  100,
                ],
              },
              "sa": {
                "a": 0,
                "k": 0,
              },
              "sk": {
                "a": 0,
                "k": 0,
              },
              "ty": "tr",
            },
          ],
          "nm": "tick",
          "ty": "gr",
        },
      ],
      "sr": 1,
      "st": 0,
      "ty": 4,
    },
  ],
  "markers": [],
  "nm": "rotate",
  "op": 38,
  "v": "5.7.4",
  "w": 24,
}
`;

exports[`rotate output stays stable > renders the same standalone SVG 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
  <style>
    .svgm-tick {
      transform-origin: 12px 11.5px;
      transform-box: view-box;
      animation: svgm-tick-rotate 1s cubic-bezier(0.42, 0, 0.58, 1) 0.25s 1 both;
    }

    @keyframes svgm-tick-rotate {
      0% {
        transform: rotate(0deg);
        animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
      }
      100% {
        transform: rotate(360deg);
        animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
      }
    }
  </style>
  <path class="svgm-tick" d="M20 6C16.333 9.667 12.667 13.333 9 17C7.333 15.333 5.667 13.667 4 12" fill="none" stroke="#2563eb" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
</svg>"
`;

exports[`scale output stays stable > renders the same CSS 1`] = `
".svgm-tick {
  transform-origin: 12px 11.5px;
  transform-box: view-box;
  animation: svgm-tick-scale 1s cubic-bezier(0.42, 0, 0.58, 1) 0.25s 1 both;
}

@keyframes svgm-tick-scale {
  0% {
    transform: scale(0);
    animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
  }
  100% {
    transform: scale(1);
    animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
  }
}"
`;

exports[`scale output stays stable > renders the same Lottie JSON 1`] = `
{
  "assets": [],
  "ddd": 0,
  "fr": 30,
  "h": 24,
  "ip": 0,
  "layers": [
    {
      "ao": 0,
      "bm": 0,
      "ddd": 0,
      "ind": 1,
      "ip": 0,
      "ks": {
        "a": {
          "a": 0,
          "k": [
            0,
            0,
          ],
        },
        "o": {
          "a": 0,
          "k": [
            100,
          ],
        },
        "p": {
          "a": 0,
          "k": [
            12,
            11.5,
          ],
        },
        "r": {
          "a": 0,
          "k": [
            0,
          ],
        },
        "s": {
          "a": 1,
          "k": [
            {
              "i": {
                "x": [
                  0.58,
                ],
                "y": [
                  1,
                ],
              },
              "o": {
                "x": [
                  0.42,
                ],
                "y": [
                  0,
                ],
              },
              "s": [
                0,
                0,
              ],
              "t": 7.5,
            },
            {
              "s": [
                100,
                100,
              ],
              "t": 37.5,
            },
          ],
        },
      },
      "nm": "tick",
      "op": 38,
      "shapes": [
        {
          "it": [
            {
              "ind": 0,
              "ks": {
                "a": 0,
                "k": {
                  "c": false,
                  "i": [
                    [
                      0,
                      0,
                    ],
                    [
                      3.6667,
                      -3.6667,
                    ],
                    [
                      1.6667,
                      1.6667,
                    ],
                  ],
                  "o": [
                    [
                      -3.6667,
                      3.6667,
                    ],
                    [
                      -1.6667,
                      -1.6667,
                    ],
                    [
                      0,
                      0,
                    ],
                  ],
                  "v": [
                    [
                      8,
                      -5.5,
                    ],
                    [
                      -3,
                      5.5,
                    ],
                    [
                      -8,
                      0.5,
                    ],
                  ],
                },
              },
              "nm": "Path 1",
              "ty": "sh",
            },
            {
              "c": {
                "a": 0,
                "k": [
                  0.1450980392156863,
                  0.38823529411764707,
                  0.9215686274509803,
                ],
              },
              "lc": 2,
              "lj": 2,
              "nm": "Stroke",
              "o": {
                "a": 0,
                "k": 100,
              },
              "ty": "st",
              "w": {
                "a": 0,
                "k": 2,
              },
            },
            {
              "a": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "nm": "Transform",
              "o": {
                "a": 0,
                "k": 100,
              },
              "p": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "r": {
                "a": 0,
                "k": 0,
              },
              "s": {
                "a": 0,
                "k": [
                  100,
                  100,
                ],
              },
              "sa": {
                "a": 0,
                "k": 0,
              },
              "sk": {
                "a": 0,
                "k": 0,
              },
              "ty": "tr",
            },
          ],
          "nm": "tick",
          "ty": "gr",
        },
      ],
      "sr": 1,
      "st": 0,
      "ty": 4,
    },
  ],
  "markers": [],
  "nm": "scale",
  "op": 38,
  "v": "5.7.4",
  "w": 24,
}
`;

exports[`scale output stays stable > renders the same standalone SVG 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
  <style>
    .svgm-tick {
      transform-origin: 12px 11.5px;
      transform-box: view-box;
      animation: svgm-tick-scale 1s cubic-bezier(0.42, 0, 0.58, 1) 0.25s 1 both;
    }

    @keyframes svgm-tick-scale {
      0% {
        transform: scale(0);
        animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
      }
      100% {
        transform: scale(1);
        animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
      }
    }
  </style>
  <path class="svgm-tick" d="M20 6C16.333 9.667 12.667 13.333 9 17C7.333 15.333 5.667 13.667 4 12" fill="none" stroke="#2563eb" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
</svg>"
`;

exports[`strokeDraw output stays stable > renders the same CSS 1`] = `
".svgm-tick {
  stroke-dasharray: 22.627;
  animation: svgm-tick-strokeDraw 1s cubic-bezier(0.42, 0, 0.58, 1) 0.25s 1 both;
}

@keyframes svgm-tick-strokeDraw {
  0% {
    stroke-dashoffset: 22.627;
    animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
  }
  100% {
    stroke-dashoffset: 0;
    animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
  }
}"
`;

exports[`strokeDraw output stays stable > renders the same Lottie JSON 1`] = `
{
  "assets": [],
  "ddd": 0,
  "fr": 30,
  "h": 24,
  "ip": 0,
  "layers": [
    {
      "ao": 0,
      "bm": 0,
      "ddd": 0,
      "ind": 1,
      "ip": 0,
      "ks": {
        "a": {
          "a": 0,
          "k": [
            0,
            0,
          ],
        },
        "o": {
          "a": 0,
          "k": [
            100,
          ],
        },
        "p": {
          "a": 0,
          "k": [
            12,
            11.5,
          ],
        },
        "r": {
          "a": 0,
          "k": [
            0,
          ],
        },
        "s": {
          "a": 0,
          "k": [
            100,
            100,
          ],
        },
      },
      "nm": "tick",
      "op": 38,
      "shapes": [
        {
          "it": [
            {
              "ind": 0,
              "ks": {
                "a": 0,
                "k": {
                  "c": false,
                  "i": [
                    [
                      0,
                      0,
                    ],
                    [
                      3.6667,
                      -3.6667,
                    ],
                    [
                      1.6667,
                      1.6667,
                    ],
                  ],
                  "o": [
                    [
                      -3.6667,
                      3.6667,
                    ],
                    [
                      -1.6667,
                      -1.6667,
                    ],
                    [
                      0,
                      0,
                    ],
                  ],
                  "v": [
                    [
                      8,
                      -5.5,
                    ],
                    [
                      -3,
                      5.5,
                    ],
                    [
                      -8,
                      0.5,
                    ],
                  ],
                },
              },
              "nm": "Path 1",
              "ty": "sh",
            },
            {
              "c": {
                "a": 0,
                "k": [
                  0.1450980392156863,
                  0.38823529411764707,
                  0.9215686274509803,
                ],
              },
              "lc": 2,
              "lj": 2,
              "nm": "Stroke",
              "o": {
                "a": 0,
                "k": 100,
              },
              "ty": "st",
              "w": {
                "a": 0,
                "k": 2,
              },
            },
            {
              "e": {
                "a": 1,
                "k": [
                  {
                    "i": {
                      "x": [
                        0.58,
                      ],
                      "y": [
                        1,
                      ],
                    },
                    "o": {
                      "x": [
                        0.42,
                      ],
                      "y": [
                        0,
                      ],
                    },
                    "s": [
                      0,
                    ],
                    "t": 7.5,
                  },
                  {
                    "s": [
                      100,
                    ],
                    "t": 37.5,
                  },
                ],
              },
              "m": 1,
              "nm": "Trim Paths",
              "o": {
                "a": 0,
                "k": 0,
              },
              "s": {
                "a": 0,
                "k": [
                  0,
                ],
              },
              "ty": "tm",
            },
            {
              "a": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "nm": "Transform",
              "o": {
                "a": 0,
                "k": 100,
              },
              "p": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "r": {
                "a": 0,
                "k": 0,
              },
              "s": {
                "a": 0,
                "k": [
                  100,
                  100,
                ],
              },
              "sa": {
                "a": 0,
                "k": 0,
              },
              "sk": {
                "a": 0,
                "k": 0,
              },
              "ty": "tr",
            },
          ],
          "nm": "tick",
          "ty": "gr",
        },
      ],
      "sr": 1,
      "st": 0,
      "ty": 4,
    },
  ],
  "markers": [],
  "nm": "strokeDraw",
  "op": 38,
  "v": "5.7.4",
  "w": 24,
}
`;

exports[`strokeDraw output stays stable > renders the same standalone SVG 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
  <style>
    .svgm-tick {
      stroke-dasharray: 22.627;
      animation: svgm-tick-strokeDraw 1s cubic-bezier(0.42, 0, 0.58, 1) 0.25s 1 both;
    }

    @keyframes svgm-tick-strokeDraw {
      0% {
        stroke-dashoffset: 22.627;
        animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
      }
      100% {
        stroke-dashoffset: 0;
        animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
      }
    }
  </style>
  <path class="svgm-tick" d="M20 6C16.333 9.667 12.667 13.333 9 17C7.333 15.333 5.667 13.667 4 12" fill="none" stroke="#2563eb" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
</svg>"
`;
